--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,6 +78,7 @@
         width: 90%;
         max-width: 100rem;
         margin: 1.25em auto;
+        font-size: 1.56rem;
       }
 
       footer {
@@ -126,6 +127,10 @@
         padding: 1.25rem;
         background-color: #fff;
         box-shadow: 0 0px 10px rgba(0, 0, 0, 0.448);
+      }
+
+      .main_index h1 {
+        margin-bottom: 0.625rem;
       }
 
       /*---------SERVICIOS---------*/
@@ -221,7 +226,6 @@
       .aside_casa2,
       .aside_casa3 {
         background-color: gray;
-        /*max-height: 180px;*/
         grid-area: aside;
       }
 
@@ -230,8 +234,10 @@
       .aside_casa3 img {
         height: auto;
         background-size: cover; 
-        max-width: 100%;
-        max-height: 100%;
+        display: block;
+        width: 100%;
+        height: 100%;
+        max-height: 35vh;
       }
 
       .article_casa1,
@@ -274,8 +280,9 @@
       .imagen_1 img {
         height: auto;
         background-size: cover;
-        max-width: 100%;
-        max-height: 100%;
+        display: block;
+        width: 100%;
+        height: 100%;
       }
 
       .article_seccion1 {
@@ -293,7 +300,7 @@
       }
 
       /*-----------------EQUIPOS----------------*/
-      .container_equipos {
+      /*.container_equipos {
         display: grid;
         grid-gap: 1.25em;
         grid-template-columns: repeat(2, 1fr);
@@ -345,12 +352,12 @@
       .article_tlahui,
       .article_mada {
         grid-area: team_text;
-      }
+      }*/
 
       /*-----------RESPONSIVE-------------*/
       @media screen and (max-width: 900px) {
         .nav-list li {
-          font-size: 0.75rem;
+          font-size: 0.87rem;
         }
 
         .imagenes_index {
@@ -364,7 +371,7 @@
         }
 
         .nav-list li {
-          font-size: 0.70rem;
+          font-size: 0.75rem;
           letter-spacing: 0.13rem;
         }
       }
@@ -386,6 +393,10 @@
           align-items: center;
           text-align: center;
         }
+
+        .section_desarrollos {
+          display: block
+        }
       }
 
       @media screen and (max-width: 630px) {
@@ -394,7 +405,7 @@
         }
 
         .fieldset_ancla_servicios {
-          font-size: 0.75rem;
+          font-size: 1rem;
         }
       }
 
@@ -469,7 +480,7 @@
         }
 
         .nav.activo {
-          height: 50vh;
+          height: 40vh;
           pointer-events: auto;
         }
 
