--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -157,11 +157,24 @@
       }
 
       .main_index {
-        max-width: 100em;
-        margin: 1.25rem auto;
-        padding: 1.25rem;
+        display: flex;
         background-color: #fff;
         box-shadow: 0 0px 10px rgba(0, 0, 0, 0.448);
+      }
+
+      .logo-index {
+        height: 100%;
+        width: 30%;
+        padding: 1rem;
+        background-size: contain;
+        background-size: contain;
+      }
+
+      .main-index-text {
+        width: 70%;
+        text-align: center;
+        margin: auto;
+        padding: 1.5rem;
       }
 
       .main_index h1 {
@@ -264,7 +277,7 @@
       }
 
       .aside_casa1 {
-        background-image: url("../images/casa1.jpeg");
+        background-image: url("../images/1ra-casa-01.jpg");
       }
 
       .aside_casa2 {
@@ -314,7 +327,7 @@
       .aside_casa1,
       .aside_casa2,
       .aside_casa3 {
-        background-size: cover;
+        background-size: contain;
         display: block;
         width: 100%;
         height: 100%;
@@ -470,6 +483,18 @@
 
         .imagenes_index {
           height: 10rem;
+        }
+
+        .main_index {
+          display: block;
+        }
+
+        .logo-index {
+          width: 100%;
+        }
+
+        .main-index-text {
+          width: 100%;
         }
 
         .service-container {
